--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -234,6 +234,10 @@
 3008104: High-Temperature Constitution IV
 3008105: High-Temperature Constitution V
 3008106: High-Temperature Constitution VI
+1008201: Esecutante D'oro
+1008202: Aktuasio Nasir
+1008203: Acrobata de Acquario
+1008204: Aktuasio Nasir+
 # Alchiba 
 1026101: Pista Epidiosi
 1026102: Vasanistírio
@@ -804,6 +808,35 @@
 3082104: Audience's Applause IV
 3082105: Audience's Applause V
 3082106: Audience's Applause VI
+# Vulpecula
+1065101: Buza Fantom
+1065102: Seitsprung
+1065103: Feagis Meinnecht
+1065104: Feagis Meinnecht+
+2065101: Hidden Criminal
+2065102: Hidden Criminal+
+2065103: Hidden Criminal++
+3065101: Elusive Phantom Thief I
+3065102: Elusive Phantom Thief II
+3065103: Elusive Phantom Thief III
+3065104: Elusive Phantom Thief IV
+3065105: Elusive Phantom Thief V
+3065106: Elusive Phantom Thief VI
+8065101: Seitsprung
+# Yasuhiko
+1082101: Potorsarsha Polka
+1082102: Zirinni Ryov
+1082103: Lyubimyye Kroon
+1082104: Potorsarsha Polka+
+2082101: Entertainer
+2082102: Entertainer+
+2082103: Entertainer++
+3082101: Circus Ringmaster's Ability I
+3082102: Circus Ringmaster's Ability II
+3082103: Circus Ringmaster's Ability III
+3082104: Circus Ringmaster's Ability IV
+3082105: Circus Ringmaster's Ability V
+3082106: Circus Ringmaster's Ability VI
 #Passive
 6030104: I am water
 6051102: Fire element
