--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -837,6 +837,7 @@
 3100104: Circus Ringmaster's Ability IV
 3100105: Circus Ringmaster's Ability V
 3100106: Circus Ringmaster's Ability VI
+8100101: Circus Ringmaster's Ability
 #Passive
 6030104: I am water
 6051102: Fire element
