--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -809,10 +809,10 @@
 3082105: Audience's Applause V
 3082106: Audience's Applause VI
 # Vulpecula
-1065101: Buza Fantom
-1065102: Seitsprung
-1065103: Feagis Meinnecht
-1065104: Feagis Meinnecht+
+1065101: Böse Phantom
+1065102: Zeit Sprung
+1065103: Vergiss Mein Nicht
+1065104: Vergiss Mein Nicht+
 2065101: Hidden Criminal
 2065102: Hidden Criminal+
 2065103: Hidden Criminal++
@@ -824,10 +824,10 @@
 3065106: Elusive Phantom Thief VI
 8065101: Seitsprung
 # Yasuhiko
-1100101: Potorsarsha Polka
-1100102: Zirinni Ryov
-1100103: Lyubimyye Kroon
-1100104: Potorsarsha Polka+
+1100101: Potryasayushche Porka
+1100102: Zverinyĭ Rëv
+1100103: lyubimyy kloun
+1100104: Potryasayushche Porka+
 2100101: Entertainer
 2100102: Entertainer+
 2100103: Entertainer++
