Update Skillname [ci skip]

--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -223,7 +223,7 @@
 # Furlong
 1008101: Sparare Acqua
 1008102: Richiesta Supporto
-1008103: Manguera de Acquario
+1008103: Manguera de Acuario
 1008104: Sparare Acqua+
 2008101: Payment sparks
 2008102: Payment sparks+
@@ -234,10 +234,10 @@
 3008104: High-Temperature Constitution IV
 3008105: High-Temperature Constitution V
 3008106: High-Temperature Constitution VI
-1008201: Esecutante D'oro
-1008202: Aktuasio Nasir
-1008203: Acrobata de Acquario
-1008204: Aktuasio Nasir+
+1008201: Ejecutante Duro
+1008202: Actuación Nacer
+1008203: Acróbata de Acuario
+1008204: Actuación Nacer+
 # Alchiba 
 1026101: Pista Epidiosi
 1026102: Vasanistírio
