--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -398,4 +398,13 @@
   description: "Furlong Evasion"
   isGoodStatus: 2
   icon: ""
-  
+"92":
+  name: "Iron Wall"
+  description: "Reduce damage received by 90%, cleared at the end of the turn, cannot be cleared by any skill"
+  isGoodStatus: 1
+  icon: "status_defup" 
+"93":
+  name: "View Cost -8000"
+  description: "View Cost -8000, cleared at the end of the turn, cannot be cleared by any skill"
+  isGoodStatus: 1
+  icon: "" 
