--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -407,4 +407,4 @@
   name: "View Cost -8000"
   description: "View Cost -8000, cleared at the end of the turn, cannot be cleared by any skill"
   isGoodStatus: 1
-  icon: "" 
+  icon: "status_awakening" 
