--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -400,11 +400,11 @@
   icon: ""
 "92":
   name: "Iron Wall"
-  description: "Reduce damage received by 90%, cleared at the end of the turn, cannot be cleared by any skill"
+  description: "Reduce damage received by 90%, cleared after a certain amount of turn, cannot be cleared by any skill"
   isGoodStatus: 1
   icon: "status_defup" 
 "93":
   name: "View Cost -8000"
-  description: "View Cost -8000, cleared at the end of the turn, cannot be cleared by any skill"
+  description: "View Cost -8000, cleared after a certain amount of turn, cannot be cleared by any skill"
   isGoodStatus: 1
   icon: "status_awakening" 
