--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -408,3 +408,13 @@
   description: "View Cost -8000, cleared after a certain amount of turn, cannot be cleared by any skill"
   isGoodStatus: 1
   icon: "status_awakening" 
+"95":
+  name: "Flamier Special"
+  description: "Works as a number counter so that Flamier doesn't use her skill till the enemy is dead"
+  isGoodStatus: 2
+  icon: ""
+"101":
+  name: "Lilac Special"
+  description: "Increase allies Atk by 2% for every 1 current combo(max 20%)"
+  isGoodStatus: 2
+  icon: ""
