Skill Name TL (temp)

--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -55,6 +55,10 @@
 1023102: Scaffolding
 1023103: High-end Construct
 1023104: Drunk Carpenter+
+1023201: Toys Marching
+1023202: Bounce Polka
+1023203: High-end Construct
+1023204: High-end Construct+
 2023101: Quick Fix Bulwark
 2023102: Quick Fix Bulwark+
 2023103: Quick Fix Bulwark++
@@ -470,6 +474,10 @@
 1011102: Crazy for Bombs
 1011103: Happy ♡ Flower Time
 1011104: Happy ♡ Flower Time+
+1011201: Charming Step
+1011202: Bloomy Dance
+1011203: Happy ♡ Flower Time
+1011204: Happy ♡ Flower Time+
 2011101: Poison Bomb
 2011102: Poison Bomb+
 2011103: Poison Bomb++
@@ -822,7 +830,7 @@
 3065104: Elusive Phantom Thief IV
 3065105: Elusive Phantom Thief V
 3065106: Elusive Phantom Thief VI
-8065101: Seitsprung
+8065101: Zeit Sprung
 # Yasuhiko
 1100101: Potryasayushche Porka
 1100102: Zverinyĭ Rëv
@@ -838,6 +846,20 @@
 3100105: Circus Ringmaster's Ability V
 3100106: Circus Ringmaster's Ability VI
 8100101: Circus Ringmaster's Ability
+# Lilac
+1101101: Unsterblich
+1101102: Fene Einerung
+1101103: Nimarus Vergessen
+1101104: Fene Einerung+
+2101101: Aromatherapy
+2101102: Aromatherapy+
+2101103: Aromatherapy++
+3101101: Flower Arrangement I
+3101102: Flower Arrangement II
+3101103: Flower Arrangement III
+3101104: Flower Arrangement IV
+3101105: Flower Arrangement V
+3101106: Flower Arrangement VI
 #Passive
 6030104: I am water
 6051102: Fire element
