--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -848,9 +848,9 @@
 8100101: Circus Ringmaster's Ability
 # Lilac
 1101101: Unsterblich
-1101102: Fene Einerung
-1101103: Nimarus Vergessen
-1101104: Fene Einerung+
+1101102: Ferne Erinnerung
+1101103: Niemals Vergessen
+1101104: Ferne Erinnerung+
 2101101: Aromatherapy
 2101102: Aromatherapy+
 2101103: Aromatherapy++
