--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -418,3 +418,18 @@
   description: "Increase allies Atk by 2% for every 1 current combo(max 50%)"
   isGoodStatus: 2
   icon: ""
+"104":
+  name: "Uplift"
+  description: "Increase Atk by 50% for one action, this status doesn't count as a buff"
+  isGoodStatus: 2
+  icon: ""
+"105":
+  name: "Arousal"
+  description: "Halve received damage once, this status doesn't count as a buff"
+  isGoodStatus: 2
+  icon: ""
+"106":
+  name: "Fatigue"
+  description: "Multiply damage received by 1.5 times once, this status doesn't count as a debuff"
+  isGoodStatus: 2
+  icon: ""
