--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -424,7 +424,7 @@
   isGoodStatus: 2
   icon: ""
 "105":
-  name: "Arousal"
+  name: "Excitement"
   description: "Halve received damage once, this status doesn't count as a buff"
   isGoodStatus: 2
   icon: ""
