--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -433,3 +433,8 @@
   description: "Multiply damage received by 1.5 times once, this status doesn't count as a debuff"
   isGoodStatus: 2
   icon: ""
+"107":
+  name: "Damaged Hero Suit"
+  description: "Multiply damage received by 1.2 times, Reduce damage dealt by 10%, removed at the end of the turn"
+  isGoodStatus: 2
+  icon: ""
