--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -435,6 +435,6 @@
   icon: ""
 "107":
   name: "Damaged Hero Suit"
-  description: "Multiply damage received by 1.2 times, Reduce damage dealt by 10%, removed at the end of the turn"
+  description: "When hit, give self Damaged Hero Suit status"
   isGoodStatus: 2
   icon: ""
