--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -860,6 +860,76 @@
 3101104: Flower Arrangement IV
 3101105: Flower Arrangement V
 3101106: Flower Arrangement VI
+# Fire Trainee
+1076101: Uppercut
+1076102: Victory Pose
+1076103: Ultimate Technique
+1076104: Ultimate Technique+
+2076101: Viewer Appeal
+2076102: Viewer Appeal+
+2076103: Viewer Appeal++
+3076101: Fire Trainee's Backup I
+3076102: Fire Trainee's Backup II
+3076103: Fire Trainee's Backup III
+3076104: Fire Trainee's Backup IV
+3076105: Fire Trainee's Backup V
+3076106: Fire Trainee's Backup VI
+# Water Trainee
+1077101: Uppercut
+1077102: Victory Pose
+1077103: Ultimate Technique
+1077104: Ultimate Technique+
+2077101: Viewer Appeal
+2077102: Viewer Appeal+
+2077103: Viewer Appeal++
+3077101: Water Trainee's Backup I
+3077102: Water Trainee's Backup II
+3077103: Water Trainee's Backup III
+3077104: Water Trainee's Backup IV
+3077105: Water Trainee's Backup V
+3077106: Water Trainee's Backup VI
+# Wood Trainee
+1078101: Uppercut
+1078102: Victory Pose
+1078103: Ultimate Technique
+1078104: Ultimate Technique+
+2078101: Viewer Appeal
+2078102: Viewer Appeal+
+2078103: Viewer Appeal++
+3078101: Wood Trainee's Backup I
+3078102: Wood Trainee's Backup II
+3078103: Wood Trainee's Backup III
+3078104: Wood Trainee's Backup IV
+3078105: Wood Trainee's Backup V
+3078106: Wood Trainee's Backup VI
+# Light Trainee
+1079101: Uppercut
+1079102: Victory Pose
+1079103: Ultimate Technique
+1079104: Ultimate Technique+
+2079101: Viewer Appeal
+2079102: Viewer Appeal+
+2079103: Viewer Appeal++
+3079101: Light Trainee's Backup I
+3079102: Light Trainee's Backup II
+3079103: Light Trainee's Backup III
+3079104: Light Trainee's Backup IV
+3079105: Light Trainee's Backup V
+3079106: Light Trainee's Backup VI
+# Shadow Trainee
+1080101: Uppercut
+1080102: Victory Pose
+1080103: Ultimate Technique
+1080104: Ultimate Technique+
+2080101: Viewer Appeal
+2080102: Viewer Appeal+
+2080103: Viewer Appeal++
+3080101: Shadow Trainee's Backup I
+3080102: Shadow Trainee's Backup II
+3080103: Shadow Trainee's Backup III
+3080104: Shadow Trainee's Backup IV
+3080105: Shadow Trainee's Backup V
+3080106: Shadow Trainee's Backup VI
 #Passive
 6030104: I am water
 6051102: Fire element
