--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -930,6 +930,44 @@
 3080104: Shadow Trainee's Backup IV
 3080105: Shadow Trainee's Backup V
 3080106: Shadow Trainee's Backup VI
+# Santetsu
+1112101: Erretekint
+1112102: Bruceshig
+1112103: Olvaso Mozgasok
+1112104: Olvaso Mozgasok+
+2112101: Bookworm's Notice
+2112102: Bookworm's Notice+
+2112103: Bookworm's Notice++
+3112101: Slow Starter I
+3112102: Slow Starter II
+3112103: Slow Starter III
+3112104: Slow Starter IV
+3112105: Slow Starter V
+3112106: Slow Starter VI
+# Roiker
+1113101: Asteroid Shoot
+1113102: Micro Kuiper Belt
+1113103: Spiral Nebula
+1113104: Asteroid Shoot+
+2113101: Sniper of the Starry Sky
+2113102: Sniper of the Starry Sky+
+2113103: Sniper of the Starry Sky++
+3113101: Battlefield Observation I
+3113102: Battlefield Observation II
+3113103: Battlefield Observation III
+3113104: Battlefield Observation IV
+3113105: Battlefield Observation V
+3113106: Battlefield Observation VI
+# Seiichiro
+2114101: Hero Command
+2114102: Hero Command+
+2114103: Hero Command++
+3114101: Elite Traction I
+3114102: Elite Traction II
+3114103: Elite Traction III
+3114104: Elite Traction IV
+3114105: Elite Traction V
+3114106: Elite Traction VI
 #Passive
 6030104: I am water
 6051102: Fire element
