--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -438,3 +438,18 @@
   description: "When hit, give self Damaged Hero Suit status"
   isGoodStatus: 2
   icon: ""
+"115":
+  name: "Santetsu Special"
+  description: "Works as a number counter so that Santetsu doesn't has infinite turn"
+  isGoodStatus: 2
+  icon: ""
+"116":
+  name: "Critical Buff"
+  description: "Apply Critical buff to allies, when allies has speed up critical chance is doubled"
+  isGoodStatus: 2
+  icon: ""
+"118":
+  name: "Critical"
+  description: "When speed is greater than the opponent, there is a chance that damage is multiplied by 1.3"
+  isGoodStatus: 2
+  icon: ""
