--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -968,6 +968,7 @@
 3114104: Elite Traction IV
 3114105: Elite Traction V
 3114106: Elite Traction VI
+8114101: Elite Traction
 #Passive
 6030104: I am water
 6051102: Fire element
