--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -931,10 +931,10 @@
 3080105: Shadow Trainee's Backup V
 3080106: Shadow Trainee's Backup VI
 # Santetsu
-1112101: Erretekint
-1112102: Bruceshig
-1112103: Olvaso Mozgasok
-1112104: Olvaso Mozgasok+
+1112101: Előretekint
+1112102: Brüche Sieg
+1112103: Olvasó Mozgások
+1112104: Olvasó Mozgások+
 2112101: Bookworm's Notice
 2112102: Bookworm's Notice+
 2112103: Bookworm's Notice++
