--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -932,7 +932,7 @@
 3080106: Shadow Trainee's Backup VI
 # Santetsu
 1112101: Előretekint
-1112102: Brüche Sieg
+1112102: Bölcsesség
 1112103: Olvasó Mozgások
 1112104: Olvasó Mozgások+
 2112101: Bookworm's Notice
