--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -453,3 +453,13 @@
   description: "When speed is greater than the opponent, there is a chance that damage is multiplied by 1.3"
   isGoodStatus: 2
   icon: ""
+"123":
+  name: "Aim"
+  description: "Multiply damage received by 1.3, last for one turn, in Auto battle more likely to be targeted"
+  isGoodStatus: 0
+  icon: "status_target"
+"124":
+  name: "Shield"
+  description: "Nullify damage received once, last for one turn"
+  isGoodStatus: 1
+  icon: "status_invincible"
