--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -501,6 +501,10 @@
 3053104: Prototype Electromagnetic Shield IV
 3053105: Prototype Electromagnetic Shield V
 3053106: Prototype Electromagnetic Shield VI
+1053201: Collimation Attack
+1053202: Flare Reinforce
+1053203: Opus Creation
+1053204: Opus Creation+
 # Gammei
 1006101: Public Order Enforcement
 1006102: Detective Inquiry
@@ -529,6 +533,10 @@
 3025104: Shielder's Determination IV
 3025105: Shielder's Determination V
 3025106: Shielder's Determination VI
+1025201: Torrent Knuckle
+1025202: Everlasting Link
+1025203: Geminis Decide
+1025204: Everlasting Link+
 # Maculata
 1059101: Fil Dernier  
 1059102: Bon Taille
@@ -969,6 +977,20 @@
 3114105: Elite Traction V
 3114106: Elite Traction VI
 8114101: Elite Traction
+# Gaius
+1115101: Sagitta Aqua
+1115102: Fluctus Caeruleum 
+1115103: Lacus Serpens Ira
+1115104: Fluctus Caeruleum +
+2115101: Pattern Release
+2115102: Pattern Release+
+2115103: Pattern Release++
+3115101: Diver's Teaching I
+3115102: Diver's Teaching II
+3115103: Diver's Teaching III
+3115104: Diver's Teaching IV
+3115105: Diver's Teaching V
+3115106: Diver's Teaching VI
 #Passive
 6030104: I am water
 6051102: Fire element
