--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -463,3 +463,8 @@
   description: "Nullify damage received once, last for one turn"
   isGoodStatus: 1
   icon: "status_invincible"
+"125":
+  name: "Mecha Bomb"
+  description: "Attach mecha bomb to two random enemy, exploding after one turn, dealing 90% max hp damage"
+  isGoodStatus: 0
+  icon: "status_bomb"
