--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -465,6 +465,6 @@
   icon: "status_invincible"
 "125":
   name: "Mecha Bomb"
-  description: "Attach mecha bomb to two random enemy, exploding after one turn, dealing 90% max hp damage"
+  description: "Attach mecha bomb to two random enemy, exploding at the end of the turn, dealing 90% max hp damage"
   isGoodStatus: 0
   icon: "status_bomb"
