--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -468,3 +468,8 @@
   description: "Attach mecha bomb to two random enemy, exploding at the end of the turn, dealing 90% max hp damage"
   isGoodStatus: 0
   icon: "status_bomb"
+"126":
+  name: ""
+  description: "No effect"
+  isGoodStatus: 0
+  icon: ""
