--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -473,3 +473,18 @@
   description: "No effect"
   isGoodStatus: 0
   icon: ""
+"131":
+  name: "Counter"
+  description: "When hit, Counter enemy with skill 1 (take effect for a maximum of 2 times)"
+  isGoodStatus: 2
+  icon: ""
+"136":
+  name: "Cerastium Special 1"
+  description: "No VP increase from this unit"
+  isGoodStatus: 2
+  icon: ""
+"137":
+  name: "Cerastium Special 2"
+  description: "Added one after any action this turn"
+  isGoodStatus: 2
+  icon: ""
