--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -274,6 +274,11 @@
 3013104: Warrior's Insight Ⅳ
 3013105: Warrior's Insight Ⅴ
 3013106: Warrior's Insight Ⅵ
+1013201: Godspeed Slash
+1013202: Clouds on The Moon
+1013203: Sword Dance of the Lion Warrior
+1013204: Sword Dance of the Lion Warrior+
+8013201: Clouds on The Moon
 # Loren
 1021101: Sorry If This Hurts
 1021102: I'll Treat You now
@@ -635,6 +640,10 @@
 3063104: Carrier of Fortune IV
 3063105: Carrier of Fortune V
 3063106: Carrier of Fortune VI
+1063201: Grand Splash
+1063202: Through Straight
+1063203: Road to Tryline
+1063204: Grand Splash+
 # Melide
 2071101: Good Luck Charm
 2071102: Good Luck Charm+
@@ -981,7 +990,7 @@
 1115101: Sagitta Aqua
 1115102: Fluctus Caeruleum 
 1115103: Lacus Serpens Ira
-1115104: Fluctus Caeruleum +
+1115104: Fluctus Caeruleum+
 2115101: Pattern Release
 2115102: Pattern Release+
 2115103: Pattern Release++
@@ -991,6 +1000,35 @@
 3115104: Diver's Teaching IV
 3115105: Diver's Teaching V
 3115106: Diver's Teaching VI
+# Cerastium
+1123101: Arie de Febvre
+1123102: Delivasion
+1123103: Bouclier du Justice
+1123104: Arie de Febvre+
+2123101: Noble Flower of The Battlefield
+2123102: Noble Flower of The Battlefield+
+2123103: Noble Flower of The Battlefield++
+3123101: Battlefield Observation I
+3123102: Battlefield Observation II
+3123103: Battlefield Observation III
+3123104: Battlefield Observation IV
+3123105: Battlefield Observation V
+3123106: Battlefield Observation VI
+# reXer
+1122101: Primary Weapon
+1122102: Secondary Slash
+1122103: Oversynchro Execution
+1122104: Oversynchro Execution+
+2122101: Gaming Skill
+2122102: Gaming Skill+
+2122103: Gaming Skill++
+3122101: Technical Attack I
+3122102: Technical Attack II
+3122103: Technical Attack III
+3122104: Technical Attack IV
+3122105: Technical Attack V
+3122106: Technical Attack VI
+8122101: Technical Attack VI
 #Passive
 6030104: I am water
 6051102: Fire element
