--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -363,6 +363,11 @@
   description: "Damage received is capped at 20000"
   isGoodStatus: 2
   icon: "b_skill_special" 
+"74":
+  name: "View Cost -2000"
+  description: "Reduce view cost by 2000"
+  isGoodStatus: 2
+  icon: "status_awakening" 
 "75":
   name: "Atk Up (Small)"
   description: "Increase Atk by 1.3 times"
