--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1028,7 +1028,7 @@
 3122104: Technical Attack IV
 3122105: Technical Attack V
 3122106: Technical Attack VI
-8122101: Technical Attack VI
+8122101: Secondary Slash
 #Passive
 6030104: I am water
 6051102: Fire element
