--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -485,11 +485,11 @@
   icon: ""
 "136":
   name: "Cerastium Special 1"
-  description: "No VP increase from this unit"
+  description: "no effect"
   isGoodStatus: 2
   icon: ""
 "137":
   name: "Cerastium Special 2"
-  description: "Added one after any action this turn"
+  description: "no effect"
   isGoodStatus: 2
   icon: ""
