--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -493,3 +493,13 @@
   description: "no effect"
   isGoodStatus: 2
   icon: ""
+"138":
+  name: "No effect"
+  description: "no effect"
+  isGoodStatus: 2
+  icon: ""
+"139":
+  name: "No effect"
+  description: "no effect"
+  isGoodStatus: 2
+  icon: ""
