--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -503,3 +503,8 @@
   description: "no effect"
   isGoodStatus: 2
   icon: ""
+"140":
+  name: "Two for one"
+  description: "When character with this skill hit the same enemy again, damage will be tripled, cannot be dispelled"
+  isGoodStatus: 2
+  icon: ""
