--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -505,6 +505,6 @@
   icon: ""
 "140":
   name: "Two for one"
-  description: "When character with this status is hit by the same enemy again, damage received will be tripled, cannot be dispelled"
+  description: "When character with this status is hit again by the same enemy that gives this status, damage received will be tripled, cannot be dispelled"
   isGoodStatus: 2
   icon: ""
