Minor skill description tweaks

--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -435,12 +435,12 @@
   icon: ""
 "106":
   name: "Fatigue"
-  description: "Multiply damage received by 1.5 times once, this status doesn't count as a debuff"
+  description: "Incoming damage increased by 1.5x once, this status doesn't count as a debuff"
   isGoodStatus: 2
   icon: ""
 "107":
   name: "Damaged Hero Suit"
-  description: "When hit, give self Damaged Hero Suit status"
+  description: "Incoming damage increased by 1.2x, Decrease ATK by 10%"
   isGoodStatus: 2
   icon: ""
 "115":
@@ -450,7 +450,7 @@
   icon: ""
 "116":
   name: "Critical Buff"
-  description: "Apply Critical buff to allies, when allies has speed up critical chance is doubled"
+  description: "Increase ATK by 1.3x at certain probability, propotional to the speed difference between self and target enemy. The chance is doubled if possessing SPD UP buff"
   isGoodStatus: 2
   icon: ""
 "118":
@@ -460,7 +460,7 @@
   icon: ""
 "123":
   name: "Aim"
-  description: "Multiply damage received by 1.3, last for one turn, in Auto battle more likely to be targeted"
+  description: "Multiply damage received by 1.3x, last for one turn, in Auto battle more likely to be targeted"
   isGoodStatus: 0
   icon: "status_target"
 "124":
