--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -364,10 +364,11 @@
   isGoodStatus: 2
   icon: "b_skill_special" 
 "74":
-  name: "View Cost -2000"
-  description: "Reduce view cost by 2000"
+  name: "Reduce view Cost"
+  description: "Reduce view (cosmetic purpose only)"
   isGoodStatus: 2
   icon: "status_awakening" 
+  wiki_hidden: true
 "75":
   name: "Atk Up (Small)"
   description: "Increase Atk by 1.3 times"
@@ -479,8 +480,8 @@
   isGoodStatus: 0
   icon: ""
 "131":
-  name: "Counter"
-  description: "When hit, Counter enemy with skill 1 (take effect for a maximum of 2 times)"
+  name: "When hit, counter-attack enemy with skill 1 (take effect for a maximum of 2 times)"
+  description: "When hit, counter-attack enemy with skill 1 (take effect for a maximum of 2 times)"
   isGoodStatus: 2
   icon: ""
 "136":
@@ -488,11 +489,13 @@
   description: "no effect"
   isGoodStatus: 2
   icon: ""
+  wiki_hidden: true
 "137":
   name: "Cerastium Special 2"
   description: "no effect"
   isGoodStatus: 2
   icon: ""
+  wiki_hidden: true
 "138":
   name: "No effect"
   description: "no effect"
