--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -10,6 +10,9 @@
 1007203: "[base skill] Deal 100% of damage to all enemies /100%<br>\
 [base skill] Increase the damage of this skill by 20% permanently, up until 160% of damage /100%"
 
+# Borealis Enemy S3
+4082103: "[base skill] Deal 25% of current View as fixed damage to all enemies /100%"
+
 # Goro variant passive
 8023201: "[When caster is alive], ATK of all allies increases for another 10% for each buff they possess (up to extra 50% ATK with 5 buffs). This effect does not stack with similar effects."
 
