--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1029,6 +1029,76 @@
 3122105: Technical Attack V
 3122106: Technical Attack VI
 8122101: Secondary Slash
+# Fire Guardman
+1054101: Warning Shot
+1054102: On Guard
+1054103: Charge Magnum
+1054104: Warning Shot+
+2054101: Line-of-sight cutoff
+2054102: Line-of-sight cutoff+
+2054103: Line-of-sight cutoff++
+3054101: Fire Guardman's Coordination I
+3054102: Fire Guardman's Coordination II
+3054103: Fire Guardman's Coordination III
+3054104: Fire Guardman's Coordination IV
+3054105: Fire Guardman's Coordination V
+3054106: Fire Guardman's Coordination VI
+# Water Guardman
+1055101: Warning Shot
+1055102: On Guard
+1055103: Charge Magnum
+1055104: Warning Shot+
+2055101: Line-of-sight cutoff
+2055102: Line-of-sight cutoff+
+2055103: Line-of-sight cutoff++
+3055101: Water Guardman's Coordination I
+3055102: Water Guardman's Coordination II
+3055103: Water Guardman's Coordination III
+3055104: Water Guardman's Coordination IV
+3055105: Water Guardman's Coordination V
+3055106: Water Guardman's Coordination VI
+# Wood Guardman
+1056101: Warning Shot
+1056102: On Guard
+1056103: Charge Magnum
+1056104: Warning Shot+
+2056101: Line-of-sight cutoff
+2056102: Line-of-sight cutoff+
+2056103: Line-of-sight cutoff++
+3056101: Wood Guardman's Coordination I
+3056102: Wood Guardman's Coordination II
+3056103: Wood Guardman's Coordination III
+3056104: Wood Guardman's Coordination IV
+3056105: Wood Guardman's Coordination V
+3056106: Wood Guardman's Coordination VI
+# Light Guardman
+1057101: Warning Shot
+1057102: On Guard
+1057103: Charge Magnum
+1057104: Warning Shot+
+2057101: Line-of-sight cutoff
+2057102: Line-of-sight cutoff+
+2057103: Line-of-sight cutoff++
+3057101: Light Guardman's Coordination I
+3057102: Light Guardman's Coordination II
+3057103: Light Guardman's Coordination III
+3057104: Light Guardman's Coordination IV
+3057105: Light Guardman's Coordination V
+3057106: Light Guardman's Coordination VI
+# Shadow Guardman
+1058101: Warning Shot
+1058102: On Guard
+1058103: Charge Magnum
+1058104: Warning Shot+
+2058101: Line-of-sight cutoff
+2058102: Line-of-sight cutoff+
+2058103: Line-of-sight cutoff++
+3058101: Shadow Guardman's Coordination I
+3058102: Shadow Guardman's Coordination II
+3058103: Shadow Guardman's Coordination III
+3058104: Shadow Guardman's Coordination IV
+3058105: Shadow Guardman's Coordination V
+3058106: Shadow Guardman's Coordination VI
 #Passive
 6030104: I am water
 6051102: Fire element
