--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -475,8 +475,18 @@
   isGoodStatus: 0
   icon: "status_bomb"
 "126":
-  name: ""
-  description: "No effect"
+  name: "Single target mode"
+  description: "Change to Single target mode"
+  isGoodStatus: 0
+  icon: ""
+"127":
+  name: "All target mode"
+  description: "Change to All target mode"
+  isGoodStatus: 0
+  icon: ""
+"130":
+  name: "Meteorite Shard"
+  description: "Special buff for skill use"
   isGoodStatus: 0
   icon: ""
 "131":
