--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -521,3 +521,18 @@
   description: "When character with this status is hit again by the same enemy that gives this status, damage received will be tripled, cannot be dispelled"
   isGoodStatus: 2
   icon: ""
+"147":
+  name: "Wandering Ghost"
+  description: "Activated by a special skill. Not a buff or debuff. Cannot be dispelled"
+  isGoodStatus: 2
+  icon: ""
+"148":
+  name: "Grudge"
+  description: "Upon death, deals 30% of maximum HP as damage to all enemies. Not a buff or debuff. Cannot be dispelled."
+  isGoodStatus: 2
+  icon: ""
+"149":
+  name: "Ghost Special"
+  description: "Number counter for the number of allies resurrected, start at 1, add 1 for every ally resurrected, reset at the end of turn"
+  isGoodStatus: 2
+  icon: ""
