--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -522,7 +522,7 @@
   isGoodStatus: 2
   icon: ""
 "147":
-  name: "Wandering Ghost"
+  name: "Wandering Soul"
   description: "Activated by a special skill. Not a buff or debuff. Cannot be dispelled"
   isGoodStatus: 2
   icon: ""
