--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -494,6 +494,11 @@
   description: "When hit, counter-attack enemy with skill 1 (take effect for a maximum of 2 times)"
   isGoodStatus: 2
   icon: ""
+"131":
+  name: "Turn Counter"
+  description: "Number Counter for each turn passed, reset at 1 after 3 count"
+  isGoodStatus: 2
+  icon: ""
 "136":
   name: "Cerastium Special 1"
   description: "no effect"
