--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Live A Hero Wiki
 url: https://liveahero-wiki.github.io
-github_edit: https://github.com/liveahero-wiki/liveahero-wiki.github.io/edit/master
+github_repo: https://github.com/liveahero-wiki/liveahero-wiki.github.io
 permalink: /blog/:year/:title/
 timezone: Asia/Tokyo
 date_format: "%-d %b %Y %R JST"
