--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -18,6 +18,10 @@
 [base skill] Decrease HP by -10% to all enemies for 1 turn(s) /50%<br>\
 [base skill] (extra_cond: Combo>=5) Activate this skill once again if Flamier is still alive, without gaining extra view /100%"
 
+# Viscunam S2
+1125102: "[base skill] Add 2000 views /100%<br>\
+[base skill] Gives a single ally one of the 3 random inventions (ATK x110%, Incoming damage x90%, Recover 20% HP) that activates after 3 actions. You can only grant up to 5 inventions of the same type to the same ally."
+
 # Vulpecula S1
 1065101: "[base skill] Deal 45% of damage to target enemy /100%<br>\
 [base skill] Decrease HP by -5% to target enemy for 2 turn(s) /60%<br>\
@@ -26,3 +30,4 @@
 # Santetsu S1
 1112101: "[base skill] SPD Down by -10 to target enemy for 1 action(s) /100%.<br>\
 [base skill] Allow Santetsu to instantly act again at most once in this turn. View cannot be acquired in this extra action."
+
