--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -20,7 +20,7 @@
 
 # Viscunam S2
 1125102: "[base skill] Add 2000 views /100%<br>\
-[base skill] Gives a single ally one of the 3 random inventions (ATK x110%, Incoming damage x90%, Recover 20% HP) that activates after 3 actions. You can only grant up to 5 inventions of the same type to the same ally."
+[base skill] Gives a single ally one of the 3 random inventions (ATK x110% permanently, Incoming damage x90% permanently, Recover 20% of max HP) that activates after 3 actions. You can only grant up to 5 inventions of the same type to the same ally."
 
 # Vulpecula S1
 1065101: "[base skill] Deal 45% of damage to target enemy /100%<br>\
