Update Global Drivers Union name

--- a/_data/wiki/Affiliation.yml
+++ b/_data/wiki/Affiliation.yml
@@ -12,8 +12,8 @@
   en: "M.A.H.A."
 "レイバーズサイト":
   en: "Laborer's Site"
-"グローバル・ドライバーズ":
-  en: "Global Drivers"
+"グローバル・ドライバーズ・ユニオン":
+  en: "Global Drivers Union"
 "インディペンデント・ヒーローズ":
   en: "Independent Heroes"
 "グルメットファイターズ":
