--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -23,12 +23,24 @@
 30:
   name: "Training Band"
   description: "Needed to increase relationship between Hero and Sidekick"
+31:
+  name: "Bronze Sales Bounce Ticket"
+  description: "Reduce Sales time by 10 minutes"
+32:
+  name: "Silver Sales Bounce Ticket"
+  description: "Reduce Sales time by 30 minutes"
+33:
+  name: "Gold Sales Bounce Ticket"
+  description: "Reduce Sales time by 1 hour"
 34:
   name: "Stamina Drink"
   description: "Item that restores 50 stamina"
 35:
   name: "Lah (Coin)"
   description: "Universal currency. It can be exchanged for goods at the shop."
+38:
+  name: "Quest Ticket"
+  description: "Needed to play certain quests. You can only hold up 3 tickets at any given time"
 39:
   name: "☆3 Heart of Sidekick"
   description:
@@ -60,10 +72,10 @@
   name: "Parallel Quartz"
   description: "Needed to increase Hero's P.Lv"
 65:
-  name: "Second Attack Technical Book"
+  name: "Second Attack Skill Manual"
   description: "Hero will prioritise the use of second skill during auto action if equipped"
 66:
-  name: "Third Attack Technical Book"
+  name: "Third Attack Skill Manual"
   description: "Hero will prioritise the use of third skill during auto action if equipped"
 74:
   name: "Record Cube Shard"
