FIx free ether stone

--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -1,7 +1,7 @@
 # Keep this sorted by item id, an refer to https://liveahero-wiki.github.io/items/
 1:
-  name: "Ether Stone"
-  description: "A beautiful crystal stone that fulfills various roles"
+  name: "Ether Stone (Paid)"
+  description: "A beautiful crystal stone that fulfills various roles (paid)"
 2:
   name: "Ether Stone"
   description: "A beautiful crystal stone that fulfills various roles (free)"
