--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -80,9 +80,39 @@
 74:
   name: "Record Cube Shard"
   description: "Combine 5 shards to form one Record Cube"
+75:
+  name: "Search Structure"
+  description: "Search Structure are auto-converted from expired Search Points. It can be exhcnaged for goods at the shop."  
 78:
   name: "Stamp of Approval"
   description: "Stamps collected to pass approval. It can be used to pass approval in the office."
 79:
   name: "Company Seal"
   description: "A stamp of approval with strong power. It can be used to pass approval in the office."
+80:
+  name: "Skill Manual of Experience"
+  description: "Earn extra EXP when Hero equips it"
+81:
+  name: "Skill Manual of Interaction"
+  description: "Earn extra Training Band when Hero equips it"
+82:
+  name: "Skill Manual of Quick Money"
+  description: "Earn extra coin when Hero equips it"
+108:
+  name: "Skill Manual of Silver Medal"
+  description: "Extra chance of earning Silver Medal"
+109:
+  name: "Skill Manual of Gold Medal"
+  description: "Extra chance of earning Gold Medal"
+110:
+  name: "Skill Manual of Parallel Quartz"
+  description: "Extra chance of earning Parallel Quartz"
+111:
+  name: "Skill Manual of Small Awakening Stone"
+  description: "Extra chance of earning Small Awakening Stone"
+112:
+  name: "Skill Manual of Medium Awakening Stoneney"
+  description: "Extra chance of earning Medium Awakening Stone"
+113:
+  name: "Skill Manual of Large Awakening Stone"
+  description: "Extra chance of earning Large Awakening Stone"
