More tl Enough for today

--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -11,6 +11,51 @@
 11:
   name: "Exp Item"
   description: "Needed to increase Hero's Level"
+12:
+  name: "Fire Small Awakening Stone"
+  description:
+13:
+  name: "Fire Medium Awakening Stone"
+  description:
+14:
+  name: "Fire Large Awakening Stone"
+  description:
+15:
+  name: "Water Small Awakening Stone"
+  description:
+16:
+  name: "Water Medium Awakening Stone"
+  description:
+17:
+  name: "Water Large Awakening Stone"
+  description:
+18:
+  name: "Wood Small Awakening Stone"
+  description:
+19:
+  name: "Wood Medium Awakening Stone"
+  description:
+20:
+  name: "Wood Large Awakening Stone"
+  description:
+21:
+  name: "Light Small Awakening Stone"
+  description:
+22:
+  name: "Light Medium Awakening Stone"
+  description:
+23:
+  name: "Light Large Awakening Stone"
+  description:
+24:
+  name: "Shadow Small Awakening Stone"
+  description:
+25:
+  name: "Shadow Medium Awakening Stone"
+  description:
+26:
+  name: "Shadow Large Awakening Stone"
+  description:
 27:
   name: "Silver Medal"
   description: "Needed to rank up Hero"
@@ -71,6 +116,18 @@
 59:
   name: "Parallel Quartz"
   description: "Needed to increase Hero's P.Lv"
+60:
+  name: "General Design"
+  description:
+61:
+  name: "Attack Design"
+  description:
+62:
+  name: "Physical Design"
+  description:
+63:
+  name: "Guard Design"
+  description:
 65:
   name: "Second Attack Skill Manual"
   description: "Hero will prioritise the use of second skill during auto action if equipped"
