--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -173,3 +173,6 @@
 113:
   name: "Skill Manual of Large Awakening Stone"
   description: "Extra chance of earning Large Awakening Stone"
+153:
+  name: "New Year's gift"
+  description: "Rewards received in celebration of the New Year. Can be exchanged for special New Year's item at the exchange shop."
