--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -526,6 +526,11 @@
   description: "When character with this status is hit again by the same enemy that gives this status, damage received will be tripled, cannot be dispelled"
   isGoodStatus: 2
   icon: ""
+"144":
+  name: "Inspiration"
+  description: "Gain 1 stack when damaged, remove all stack and gain 2000 vp for each stack at the start of action"
+  isGoodStatus: 2
+  icon: ""
 "147":
   name: "Wandering Soul"
   description: "Activated by a special skill. Not a buff or debuff. Cannot be dispelled"
