--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -414,6 +414,10 @@
 3033104: Photosynthetic Body IV
 3033105: Photosynthetic Body V
 3033106: Photosynthetic Body VI
+1033201: Danza Feliz
+1033202: Muro de Hielo
+1033203: Danza que Trae paz
+1033204: Muro de Hielo+
 # Barrel
 1007101: Sharpshooting!
 1007102: Fire Away!
@@ -1099,6 +1103,36 @@
 3058104: Shadow Guardman's Coordination IV
 3058105: Shadow Guardman's Coordination V
 3058106: Shadow Guardman's Coordination VI
+# Sensettia
+1126101: Gesangvoll
+1126102: Heftig Schrei
+1126103: Glänzend Sänger
+1126104: Glänzend Sänger+
+2126101: Singing Angel
+2126102: Singing Angel+
+2126103: Singing Angel++
+3126101: Healing Rhythm I
+3126102: Healing Rhythm II
+3126103: Healing Rhythm III
+3126104: Healing Rhythm IV
+3126105: Healing Rhythm V
+3126106: Healing Rhythm VI
+# Viscunam
+1125101: Main Mécanique
+1125102: Présentation
+1125103: Grand Invention
+1125104: Grand Invention+
+2125101: Ground-breaking Inventionl
+2125102: Ground-breaking Invention+
+2125103: Ground-breaking Invention++
+3125101: Inventor's Inspiration I
+3125102: Inventor's Inspirationm II
+3125103: Inventor's Inspiration III
+3125104: Inventor's Inspiration IV
+3125105: Inventor's Inspiration V
+3125106: Inventor's Inspiration VI
+8125101: Grand Invention
+8125102: Grand Invention+
 #Passive
 6030104: I am water
 6051102: Fire element
