--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -418,6 +418,8 @@
 1033202: Muro de Hielo
 1033203: Danza que Trae paz
 1033204: Muro de Hielo+
+8033202: Muro de Hielo
+8033203: Muro de Hielo+
 # Barrel
 1007101: Sharpshooting!
 1007102: Fire Away!
