--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -546,3 +546,13 @@
   description: "Number counter for the number of allies resurrected, start at 1, add 1 for every ally resurrected, reset at the end of turn"
   isGoodStatus: 2
   icon: ""
+"164":
+  name: "Recovery Reduced 10%"
+  description: "Effect of HP recovery is reduced by 10%, cannot be dispelled."
+  isGoodStatus: 2
+  icon: ""
+"165":
+  name: "Super Regeneration"
+  description: "Recover 30% max hp at the end of the turn, cannot be dispelled."
+  isGoodStatus: 2
+  icon: ""
