Less build time in dev

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         docker run \
         -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "jekyll --version && chmod 777 /srv/jekyll && jekyll build --future"
+        jekyll/builder:latest /bin/bash -c "jekyll --version && chmod 777 /srv/jekyll && JEKYLL_ENV=production jekyll build --future"
     - name: Publish to Github Pages
       run: |
         sudo chmod 777 _site
