--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,10 @@ defaults:
       unreleased: false
       additional_scripts: ["/assets/atlas.min.js"]
   - scope:
+      type: "temp"
+    values:
+      layout: chara
+  - scope:
       type: "events"
     values:
       layout: event
@@ -48,6 +52,8 @@ defaults:
 collections:
   charas:
     output: true
+  temp:
+    output: true
   events:
     output: true
     sort_by: event_start_time
@@ -62,3 +68,7 @@ exclude:
   - CONTRIBUTING.md
   - ".git"
   - "cdn/.git"
+
+compress_html:
+  ignore:
+    envs: ["development"]
