Chara rewrite to implement tabs (#189)
* Rewrite tool

* Fix narihito uncode in bio

* rewrite for unreleased

* Line ending

* Less build time in dev

* Update layout

* chara layout

* Fix rewrite.py: ignore uninteresting tag

* Use new layout

* Optimize font

* tab js

* Great rewrite

* Slight new line fix

* Ignore charas2

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ defaults:
   - scope:
       type: "charas"
     values:
+      layout: chara
       unreleased: false
       additional_scripts: ["/assets/atlas.min.js"]
   - scope:
@@ -62,3 +63,7 @@ exclude:
   - CONTRIBUTING.md
   - ".git"
   - "cdn/.git"
+
+compress_html:
+  ignore:
+    envs: ["development"]
